2012-07-16: Jesse Korblum <research@jessekornblum.com>:

	* filedata.cpp: Added includes for *nix compilation

2012-07-14 Jesse Kornblum <research@jessekornblum.com>:

	* win.sh: Updated for C++ compiler warnings
	* normal.sh: Updated for C++ compiler warnings
	* fuzzy.c: Corrected logic error for when sigs don't have filenames
	* ui.cpp: Added const to print_error's state variable
	* match.cpp: Rewrote to use Filedata class
	* filedata.cpp: Created Filedata class
	* main.cpp: Adapted to use Filedata class

2012-07-13 Jesse Kornblum <research@jessekornblum.com>:

	* fuzzy.c: Fixed major bug regarding incorrect match scores for hashes with long filenames
	* dig.cpp: Added warning message when not all data on stdin was hashed. Also increased stdin buffer to 512MB.
	* configure.ac: Version bump to 2.9.
	* main.cpp: Added flags for clustering mode
	* ssdeep.h: Added flags for clustering mode
	* match.cpp: Setting up for clustering mode
	
2012-05-25 Jesse Kornblum <research@jessekornblum.com>:

	* main.cpp: Updated command line argument processing
	* ssdeep.1: Clarifications on description.

2012-05-24 Jesse Kornblum <research@jessekornblum.com>:

	* match.cpp: Convert to C++

2012-04-24 Jesse Kornblum <research@jessekornblum.com>:
	
	* ssdeep.1: Updating support for stdin, clarifying modes
        * Makefile.am: LF to CR/LF change now done by zip program
	* ssdeep.h: Adding Doxygen comments
	* match.cpp: Fixed bug in Win32 filename construction
	* fuzzy.h: Cleanup and commenting
	* engine.cpp: Added const definitions
	* Experimental conversion to C++
	* Commented out all references to clustering
	* main.cpp: Fixed some bugs in the command line argument processing

2012-04-15: Jesse Kornblum <research@jessekornblum.com>:

	* main.c: Fixed error handling in getopt processing
	
2012-02-16 Jesse Kornblum <research@jessekornblum.com>:

	* main.c: Bump copyright to 2012 in usage message. Add flag for clustering
	* main.h: Added mode_cluster