@@ -330,9 +330,12 @@ int main(int argc, char **argv)
   // If the user has requested us to compare signature files, use
   // our existng code to pretty-print directory matching to do the
   // work for us.
-  if (s->mode & mode_sigcompare)
+  if (MODE(mode_sigcompare))
     s->mode |= mode_match_pretty;
-  if (s->mode & mode_match_pretty)
+  // The match_pretty() function computes all matches between known
+  // hashes.
+  // RBF - Rename match_pretty() function for clarity?
+  if (MODE(mode_match_pretty) or MODE(mode_sigcompare) or MODE(mode_cluster))
     match_pretty(s);
   if (MODE(mode_cluster))
     display_clusters(s);
